# minsky

./: .claudeignore  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .lintstagedrc.json  .mt1549-prompt.txt  .pr_title  .prettierignore  .secretlintignore  .secretlintrc.json  067-refactor-minsky-workflow-rule-into-smaller-focused-rules.md  224-fix-test-failures-found-during-task-session.md  ACTIVATION_SUMMARY.md  ACTUAL-STATUS.md  AGENTS.md  BUILD.md  BULK_PROCESSING_PROGRESS.md  BULK_PROCESSING_STRATEGY.md  CHANGELOG.md  CHANGELOG.md.save  CLAUDE.md  CLI_COMMAND_CATALOG.md  COMPLETION.md  COMPREHENSIVE_MIGRATION_SUMMARY.md  CONFIGURATION_AUDIT_FINDINGS.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MT256-IMPLEMENTATION-COMPLETE.md  MT483-IMPLEMENTATION-SUMMARY.md  PR.md  PR_BODY.md  PR_DESCRIPTION.md  (+380 more)
.claude/: settings.json
.cursor/: mcp.json  pr_description.md
.cursor-rules/: testing-boundaries.mdc
.github/: dependabot.yml
.husky/: commit-msg  post-commit  post-merge  pre-commit  pre-commit-typescript  pre-commit.backup  pre-push
.minsky/: config.yaml  policy-coverage-calibration.jsonl  reviewer-trigger.md
.specstory/: .project.json  (+1 more)
cockpit-tray/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
cockpit-tray/src-tauri/capabilities/: deep-link.json
cockpit-tray/src-tauri/icons/: icon.icns
cockpit-tray/src-tauri/src/: deeplink.rs  hotkey.rs  launchd.rs  main.rs  menu.rs  supervisor.rs  watcher_backend.rs  watcher_web.rs
(+5743 files in other folders)
