[package]
name = "cockpit-tray"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
# OS-toast notifications on cockpit-web build failure (mt#2306).
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
open = "5"
# Filesystem watcher for the cockpit-web auto-rebuild (mt#2297). notify is the
# cross-platform fs-notification crate (CC0-1.0); notify-debouncer-mini coalesces
# bursty editor-save events into a single debounced rebuild trigger (MIT/Apache-2.0).
notify = "8"
notify-debouncer-mini = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# Deterministic file-mtime control in tests (cockpit-web freshness checks).
filetime = "0.2"